@@ -629,6 +629,7 @@ class Base(mpdclient3.mpd_connection):
                 self.window.set_keep_above(True)
             if self.sticky:
                 self.window.stick()
+        self.set_rgba_window(self.window)
         self.tooltips = gtk.Tooltips()
         self.UIManager = gtk.UIManager()
         actionGroup = gtk.ActionGroup('Actions')
@@ -715,6 +716,7 @@ class Base(mpdclient3.mpd_connection):
         self.notebook = gtk.Notebook()
         self.notebook.set_tab_pos(gtk.POS_TOP)
         self.notebook.set_property('can-focus', False)
+        self.notebook.set_scrollable(True)
         # Current tab
         self.expanderwindow = gtk.ScrolledWindow()
         self.expanderwindow.set_policy(gtk.POLICY_AUTOMATIC, gtk.POLICY_AUTOMATIC)
@@ -1173,6 +1175,14 @@ class Base(mpdclient3.mpd_connection):
             gobject.timeout_add(250, self.iterate_status_icon)
 
         gc.disable()
+
+    def set_rgba_window(self, window):
+        """ Set support for transparent themeing """
+        screen = self.window.get_screen()
+        colormap = screen.get_rgba_colormap()
+        if colormap == None:
+            colormap = screen.get_rgb_colormap()
+        window.set_colormap(colormap)
 
     def print_version(self):
         print _("Version: Sonata"), __version__
@@ -2166,6 +2176,7 @@ class Base(mpdclient3.mpd_connection):
             edit_mode = False
         # Prompt user for playlist name:
         dialog = gtk.Dialog(None, self.window, gtk.DIALOG_MODAL | gtk.DIALOG_DESTROY_WITH_PARENT, (gtk.STOCK_CANCEL, gtk.RESPONSE_REJECT, gtk.STOCK_OK, gtk.RESPONSE_ACCEPT))
+        self.set_rgba_window(dialog)
         if edit_mode:
             dialog.set_title(_("Edit Stream"))
         else:
@@ -2252,6 +2263,7 @@ class Base(mpdclient3.mpd_connection):
         if self.conn:
             # Prompt user for playlist name:
             dialog = gtk.Dialog(title, self.window, gtk.DIALOG_MODAL | gtk.DIALOG_DESTROY_WITH_PARENT, (gtk.STOCK_CANCEL, gtk.RESPONSE_REJECT, gtk.STOCK_SAVE, gtk.RESPONSE_ACCEPT))
+            self.set_rgba_window(dialog)
             dialog.set_role(role)
             hbox = gtk.HBox()
             hbox.pack_start(gtk.Label(_('Playlist name') + ':'), False, False, 5)
@@ -4331,6 +4343,7 @@ class Base(mpdclient3.mpd_connection):
         artist = self.songinfo.artist
         title = self.songinfo.title
         dialog = gtk.Dialog('Lyrics Search', self.window, gtk.DIALOG_MODAL | gtk.DIALOG_DESTROY_WITH_PARENT, (gtk.STOCK_CANCEL, gtk.RESPONSE_REJECT, gtk.STOCK_FIND, gtk.RESPONSE_ACCEPT))
+        self.set_rgba_window(dialog)
         dialog.action_area.get_children()[0].set_label(_("_Search"))
         dialog.action_area.get_children()[0].set_image(gtk.image_new_from_stock(gtk.STOCK_FIND, gtk.ICON_SIZE_MENU))
         dialog.set_role('lyricsSearch')
@@ -4888,6 +4901,7 @@ class Base(mpdclient3.mpd_connection):
 
     def on_choose_image(self, widget):
         self.choose_dialog = gtk.Dialog(_("Choose Cover Art"), self.window, gtk.DIALOG_MODAL, (gtk.STOCK_CANCEL, gtk.RESPONSE_REJECT))
+        self.set_rgba_window(self.choose_dialog)
         self.choose_dialog.set_role('chooseCoverArt')
         choosebutton = self.choose_dialog.add_button(_("Choose"), gtk.RESPONSE_ACCEPT)
         chooseimage = gtk.Image()
@@ -5361,6 +5375,7 @@ class Base(mpdclient3.mpd_connection):
 
     def prefs(self, widget):
         prefswindow = gtk.Dialog(_("Preferences"), self.window, flags=gtk.DIALOG_DESTROY_WITH_PARENT)
+        self.set_rgba_window(prefswindow)
         prefswindow.set_role('preferences')
         prefswindow.set_resizable(False)
         prefswindow.set_has_separator(False)
@@ -6061,6 +6076,7 @@ class Base(mpdclient3.mpd_connection):
     def get_art_location_custom(self, combobox):
         # Prompt user for playlist name:
         dialog = gtk.Dialog(_("Custom Artwork"), self.window, gtk.DIALOG_MODAL | gtk.DIALOG_DESTROY_WITH_PARENT, (gtk.STOCK_CANCEL, gtk.RESPONSE_REJECT, gtk.STOCK_OK, gtk.RESPONSE_ACCEPT))
+        self.set_rgba_window(dialog)
         dialog.set_role('customArtwork')
         hbox = gtk.HBox()
         hbox.pack_start(gtk.Label(_('Artwork filename') + ':'), False, False, 5)
@@ -6501,6 +6517,7 @@ class Base(mpdclient3.mpd_connection):
     def edit_tags(self, widget):
         if not HAVE_TAGPY:
             error_dialog = gtk.MessageDialog(self.window, gtk.DIALOG_MODAL, gtk.MESSAGE_WARNING, gtk.BUTTONS_CLOSE, _("Taglib and/or tagpy not found, tag editing support disabled."))
+            self.set_rgba_window(error_dialog)
             error_dialog.set_title(_("Edit Tags"))
             error_dialog.set_role('editTagsError')
             error_dialog.connect('response', self.choose_image_dialog_response)
@@ -6508,6 +6525,7 @@ class Base(mpdclient3.mpd_connection):
             return
         if not os.path.isdir(self.musicdir[self.profile_num]):
             error_dialog = gtk.MessageDialog(self.window, gtk.DIALOG_MODAL, gtk.MESSAGE_WARNING, gtk.BUTTONS_CLOSE, _("The path") + " " + self.musicdir[self.profile_num] + " " + _("does not exist. Please specify a valid music directory in preferences."))
+            self.set_rgba_window(error_dialog)
             error_dialog.set_title(_("Edit Tags"))
             error_dialog.set_role('editTagsError')
             error_dialog.connect('response', self.choose_image_dialog_response)
@@ -6552,6 +6570,7 @@ class Base(mpdclient3.mpd_connection):
         if not os.path.exists(tags[0]['fullpath']):
             self.change_cursor(None)
             error_dialog = gtk.MessageDialog(self.window, gtk.DIALOG_MODAL, gtk.MESSAGE_WARNING, gtk.BUTTONS_CLOSE, _("File ") + "\"" + tags[0]['fullpath'] + "\"" + _(" not found. Please specify a valid music directory in preferences."))
+            self.set_rgba_window(error_dialog)
             error_dialog.set_title(_("Edit Tags"))
             error_dialog.set_role('editTagsError')
             error_dialog.connect('response', self.choose_image_dialog_response)
@@ -6560,12 +6579,14 @@ class Base(mpdclient3.mpd_connection):
         if self.edit_next_tag(tags) == False:
             self.change_cursor(None)
             error_dialog = gtk.MessageDialog(self.window, gtk.DIALOG_MODAL, gtk.MESSAGE_WARNING, gtk.BUTTONS_CLOSE, _("No music files with editable tags found."))
+            self.set_rgba_window(error_dialog)
             error_dialog.set_title(_("Edit Tags"))
             error_dialog.set_role('editTagsError')
             error_dialog.connect('response', self.choose_image_dialog_response)
             error_dialog.show()
             return
         editwindow = gtk.Dialog("", self.window, gtk.DIALOG_MODAL)
+        self.set_rgba_window(editwindow)
         editwindow.set_role('editTags')
         editwindow.set_size_request(375, -1)
         editwindow.set_resizable(False)
@@ -6914,6 +6935,7 @@ class Base(mpdclient3.mpd_connection):
             save_success = filetag.save()
             if not (save_success and self.conn and self.status):
                 error_dialog = gtk.MessageDialog(self.window, gtk.DIALOG_MODAL, gtk.MESSAGE_WARNING, gtk.BUTTONS_CLOSE, _("Unable to save tag to music file."))
+                self.set_rgba_window(error_dialog)
                 error_dialog.set_title(_("Edit Tags"))
                 error_dialog.set_role('editTagsError')
                 error_dialog.connect('response', self.choose_image_dialog_response)
@@ -7007,6 +7029,7 @@ class Base(mpdclient3.mpd_connection):
             self.about_dialog.set_modal(True)
         except:
             pass
+        self.set_rgba_window(self.about_dialog)
         self.about_dialog.set_name('Sonata')
         self.about_dialog.set_role('about')
         self.about_dialog.set_version(__version__)
@@ -7111,6 +7134,7 @@ class Base(mpdclient3.mpd_connection):
                 [ _("Stream Shortcuts"), streamshortcuts ],
                 [ _("Info Shortcuts"), infoshortcuts ]]
         dialog = gtk.Dialog(_("Shortcuts"), self.about_dialog, gtk.DIALOG_MODAL | gtk.DIALOG_DESTROY_WITH_PARENT, (gtk.STOCK_CLOSE, gtk.RESPONSE_CLOSE))
+        self.set_rgba_window(dialog)
         dialog.set_role('shortcuts')
         dialog.set_default_response(gtk.RESPONSE_CLOSE)
         dialog.set_size_request(-1, 320)
