@@ -1,7 +1,8 @@
 v1.4.1 - February 2, 2008
 	+ Remove queue support (it was removed from mpd-svn, complain to them)
 	+ Improved re-ordering of playlist songs (including multiple selected songs)
-	+ Add album info back
+	+ Add album info into info tab
+	+ Support for alpha transparency if the gtk theme supports it (Jon)
 	+ Use hand2 instead of hand1 for song info links
 	+ Bug: Traceback can occur after enabling audioscrobbler
 	+ Bug: Text background color on tabs (ecik)
@@ -9,6 +10,7 @@ v1.4.1 - February 2, 2008
 	+ Bug: Crash when using libegg with system tray icon disabled
 	+ Bug: Disable tag editing link in info tab for streams/remote files
 	+ Bug: Unescape common html codes from lyrics fetching, enable formatting
+	+ Bug: The main notebook should be scrollable
 
 v1.4 - January 15, 2008
 	+ Integrate info window into main player
